# Parallel-SAT

./: README
presentazione/: Makefile  presentazione_parallel-sat.tex
relazione/: Makefile  efficienza.gp  relazione_parallel-sat.tex  speed-up.gp  tempi.gp
src/: CMakeLists.txt  Makefile  clause.cpp  clause.hpp  communications.cpp  communications.hpp  dpll-parallel.cpp  dpll-parallel.hpp  dpll-serial.cpp  dpll-serial.hpp  literal.cpp  literal.hpp  main-parallel.cpp  main-serial.cpp  node.cpp  node.hpp
